--- a/lesson-2/project.html
+++ b/lesson-2/project.html
@@ -28,6 +28,9 @@
       width: 300px;
       background-color: #dfa2cc;
     }
+    .white-elements {
+      color: #ffffff;
+    }
   </style>
 </head>
 
@@ -38,7 +41,7 @@
   </div>
   <div class="soft-pink">
     Here are my elements:
-    <div>
+    <div class="white-elements">
       <span>elements</span>
       <span>elements</span>
       <span>elements</span>
