--- a/lesson-2/project.html
+++ b/lesson-2/project.html
@@ -31,6 +31,10 @@
     .white-elements {
       color: #ffffff;
     }
+    
+    .elements {
+      background-color: #e453d0;
+    }
   </style>
 </head>
 
@@ -42,24 +46,20 @@
   <div class="soft-pink">
     Here are my elements:
     <div class="white-elements">
-      <span>elements</span>
-      <span>elements</span>
-      <span>elements</span>
-      <span>elements</span>
-      <span>elements</span>
-      <span>elements</span>
-      <span>elements</span>
-      <span>elements</span>
-      <span>elements</span>
-      <span>elements</span>
-      <span>elements</span>
-      <span>elements</span>
-      <span>elements</span>
-      <span>elements</span>
-      <span>elements</span>
-      <span>elements</span>
-      <span>elements</span>
-      <span>elements</span>
+       <span class="elements">elements</span>
+       <span class="elements">elements</span>
+       <span class="elements">elements</span>
+       <span class="elements">elements</span>
+       <span class="elements">elements</span>
+       <span class="elements">elements</span>
+       <span class="elements">elements</span>
+       <span class="elements">elements</span>
+       <span class="elements">elements</span>
+       <span class="elements">elements</span>
+       <span class="elements">elements</span>
+       <span class="elements">elements</span>
+       <span class="elements">elements</span>
+       <span class="elements">elements</span>
     </div>
   </div>
 </body>
