--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <a href="lesson-2/project.html">Урок 2</a>
                     </li>
                     <li class="content__list-item">
-                        <a href="lesson-3">Урок 2</a>
+                        <a href="lesson-3/homework.html">Урок 3</a>
                     </li>
                 </ul>
             </div>
