--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
                     <li class="content__list-item">
                         <a href="lesson-5/homework.html">Урок 5</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="lesson-6/homework.html">Урок 6</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
