--- a/lesson-7/homework.html
+++ b/lesson-7/homework.html
@@ -58,51 +58,51 @@
   <!-- https://7oroof.com/demos/steakin/index.html -->
   <header class="header">
     <div class="container">
-      <div class="header__Food">
+      <div class="header__food">
         <a class="logo" href="https://7oroof.com/demos/steakin/assets/images/logo/logo-light.png"></a>
         <nav class="nav">
           <ul class="nav__list">
             <li class="nav__item">
-              <a class="nav__link--active" href="#">HOME</a>
+              <a class="nav__link nav__link--active" href="#">HOME</a>
             </li>
             <li class="nav__item">
-              <a class="nav__link href=" #">ABOUT</a>
+              <a class="nav__link" href="#">MENU</a>
             </li>
             <li class="nav__item">
-              <a class="nav__link href=" #">MENU</a>
+              <a class="nav__link" href="#">MENU</a>
             </li>
             <li class="nav__item">
-              <a class="nav__linkhref=" #">book a table</a>
+              <a class="nav__link" href="#">book a table</a>
             </li>
             <li class="nav__item">
-              <a class="nav__link href=" #">features</a>
+              <a class="nav__link" href="#">features</a>
             </li>
             <li class="nav__item">
-              <a class="nav__link href=" #">Blog</a>
+              <a class="nav__link" href="#">Blog</a>
             </li>
             <li class="nav__item">
-              <a class="nav__link href=" #">shop</a>
+              <a class="nav__link" href="#">shop</a>
             </li>
             <li class="nav__item">
-              <a class="nav__link href=" #">elements</a>
+              <a class="nav__link" href="#">elements</a>
             </li>
           </ul>
         </nav>
       </div>
       <div class="header__controls">
         <button class="button">Book A Table</button>
-        <ul class="all__nav">
-          <li class="all__nav__item">
-            <a class="all__nav__link" href=""></a>
+        <ul class="header__nav">
+          <li class="header__nav-item">
+            <a class="header__nav-link" href=""></a>
             <img src="" alt="">
             <span>2</span>
           </li>
-          <li class="all__nav__item">
-            <a class="all__nav__link" href=""></a>
+          <li class="header__nav-item">
+            <a class="header__nav-link header__nav-link--active" href=""></a>
             <img src="" alt="">
           </li>
-          <li class="all__nav__item">
-            <a class="all__nav__link" href=""></a>
+          <li class="header__nav-item">
+            <a class="header__nav-link" href=""></a>
             <img src="" alt="">
           </li>
         </ul>
@@ -122,8 +122,8 @@
   <section class="restaurant">
     <div class="container">
       <div class="restaurant__elements">
-        <p class="restaurant__Hello">Hello dear</p>
-        <h2 class="restaurant__Steak">Welcome To Steak In</h2>
+        <p class="restaurant__hello">Hello dear</p>
+        <h2 class="restaurant__steak">Welcome To Steak In</h2>
         <p class="restaurant__text">Steak In was the first retaurant to open in Egypt, the resturant was designed with
           the history in mind we have
           created a soft industrial dining room, combined with an open kitchen, coffee take out bar and on site coffee
@@ -134,40 +134,38 @@
       </div>
     </div>
   </section>
-  <section class="Recipes">
+  <section class="recipes">
     <div class="container">
-      <p class="Recipes__"></p>
-      <h2 class="Recipes__"></h2>
-    </div>
-    <div class="Recipes__menu">
-      <div class="Recipes__container__one">
-        <img src="" alt="">
-        <ul class="container__one">
-          <p>Grilled Fillet</p>
-          <p>Pork fillet, ginger, garlic, honey, pepper & canola oil, Pork fillet, ginger.</p>
-        </ul>
-      </div>
-      <div class="Recipes__container__two">
-        <img src="" alt="">
-        <ul class="container__two">
-          <p>Alder Grilled Seafood</p>
-          <p>Monkfish, onion, paella rice,smoked paprika, Monkfish, onion, paella..</p>
-        </ul>
-      </div>
-      <div class="Recipes__container__three">
-        <img src="" alt="">
-        <ul class="container__three">
-          <p>Chicken Breast</p>
-          <p>
-            Paupiette of chicken & beans, blue cheese, rosemary & beans.</p>
-        </ul>
-      </div>
-      <div class="Recipes__container__four">
-        <img src="" alt="">
-        <ul class="container__four">
-          <p>Sea Trout</p>
-          <p>Roast trout, English asparagus, watercress , delicious.</p>
-        </ul>
+      <div class="recipes__menu">
+        <div class="recipes__container recipes__container--reversed">
+          <img src="" alt="">
+          <ul class="recipes__nav">
+            <p>Grilled Fillet</p>
+            <p>Pork fillet, ginger, garlic, honey, pepper & canola oil, Pork fillet, ginger.</p>
+          </ul>
+        </div>
+        <div class="recipes__container ">
+          <img src="" alt="">
+          <ul class="recipes__nav">
+            <p>Alder Grilled Seafood</p>
+            <p>Monkfish, onion, paella rice,smoked paprika, Monkfish, onion, paella..</p>
+          </ul>
+        </div>
+        <div class="recipes__container recipes__container--reversed">
+          <img src="" alt="">
+          <ul class="recipes__nav">
+            <p>Chicken Breast</p>
+            <p>
+              Paupiette of chicken & beans, blue cheese, rosemary & beans.</p>
+          </ul>
+        </div>
+        <div class="recipes__container">
+          <img src="" alt="">
+          <ul class="recipes__nav">
+            <p>Sea Trout</p>
+            <p>Roast trout, English asparagus, watercress , delicious.</p>
+          </ul>
+        </div>
       </div>
     </div>
   </section>
