--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <a href="lesson-7/homework.html">Урок 7</a>
                     </li>
                     <li class="content__list-item">
-                        <a href="lesson-8/homework.html">Урок 8</a>
+                        <a href="lesson-8/work-68-lesson/homework.html">Урок 8</a>
                     </li>
                 </ul>
             </div>
