--- a/lesson-8/work-68-lesson/homework.html
+++ b/lesson-8/work-68-lesson/homework.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="Home-work/lesson-8/work-68-lesson/css/reset.css" rel="stylesheet">
-  <link href="Home-work/lesson-8/work-68-lesson/css/style.css" rel="stylesheet">
+  <link href="css/reset.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
   <title> 68. Позиционирование элементов - position</title>
 </head>
 
