--- a/index.html
+++ b/index.html
@@ -116,6 +116,15 @@
                     <li class="content__list-item">
                         <a href="lesson-8/work-68-lesson/homework.html">Урок 8</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="lesson-8/work-69-lesson/homework.html">Урок 9</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson-8/work-71-lesson/homework.html">Урок 10</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson-8/work-72-lesson/homework.html">Урок11</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
