--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
                     <li class="content__list-item">
                         <a href="lesson-8/work-72-lesson/homework.html">Урок11</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="lesson-9/homework.html">Урок12</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
