--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
                     <li class="content__list-item">
                         <a href="lesson-10/homework.html">Урок13</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="lesson-11/homework.html">Урок14</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
