--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
                     <li class="content__list-item">
                         <a href="lesson-11/homework.html">Урок14</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="lesson-12/homework.html">Урок15</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
