--- a/index.html
+++ b/index.html
@@ -123,19 +123,19 @@
                         <a href="lesson-8/work-71-lesson/homework.html">Урок 10</a>
                     </li>
                     <li class="content__list-item">
-                        <a href="lesson-8/work-72-lesson/homework.html">Урок11</a>
+                        <a href="lesson-8/work-72-lesson/homework.html">Урок 11</a>
                     </li>
                     <li class="content__list-item">
-                        <a href="lesson-9/homework.html">Урок12</a>
+                        <a href="lesson-9/homework.html">Урок 12</a>
                     </li>
                     <li class="content__list-item">
-                        <a href="lesson-10/homework.html">Урок13</a>
+                        <a href="lesson-10/homework.html">Урок 13</a>
                     </li>
                     <li class="content__list-item">
-                        <a href="lesson-11/homework.html">Урок14</a>
+                        <a href="lesson-11/homework.html">Урок 14</a>
                     </li>
                     <li class="content__list-item">
-                        <a href="lesson-12/homework.html">Урок15</a>
+                        <a href="lesson-12/homework.html">Урок 15 Wake & Bake</a>
                     </li>
                 </ul>
             </div>
