--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
                     <li class="content__list-item">
                         <a href="lesson-12/homework.html">Урок 15 Wake & Bake</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="lesson-12/diploma-project.html">diploma</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
@@ -157,3 +160,4 @@
 <script src="src/index.js"></script>
 </body>
 </html>
+
