--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <a href="lesson-12/homework.html">Урок 15 Wake & Bake</a>
                     </li>
                     <li class="content__list-item">
-                        <a href="lesson-12/diploma-project.html">diploma</a>
+                        <a href="diploma/diploma-project.html">diploma</a>
                     </li>
                 </ul>
             </div>
@@ -160,4 +160,5 @@
 <script src="src/index.js"></script>
 </body>
 </html>
+
 
