--- a/diploma/diploma-project.html
+++ b/diploma/diploma-project.html
@@ -278,7 +278,7 @@
                         <div class="vertical-group">
                             <div class="electroHub__gadgets-listone">
                                 <div class="electroHub__gadgets-macbook">
-                                    <img src="/img/decor/macbook.png" alt="MacBook laptop">
+                                    <img src="img/decor/macbook.png" alt="MacBook laptop">
                                 </div>
                                 <div class="electroHub__gadgets-textone" id="laptops">
                                     Laptops
@@ -291,7 +291,7 @@
                             </div>
                             <div class="electroHub__gadgets-listtwo">
                                 <div class="electroHub__gadgets-watch">
-                                    <img src="/img/content/watch.png" alt="">
+                                    <img src="img/content/watch.png" alt="">
                                 </div>
                                 <div class="electroHub__gadgets-texttwo">
                                     <span>
@@ -306,7 +306,7 @@
                         <div class="horizontal-group">
                             <div class="electroHub__gadgets-listthree">
                                 <div class="electroHub__gadgets-phone">
-                                    <img src="/img/content/iphone.png" alt="">
+                                    <img src="img/content/iphone.png" alt="">
                                 </div>
                                 <p class="electroHub__gadgets-textthree" id="phones">
                                     Phones
@@ -323,7 +323,7 @@
                                     <p>Empower your work</p>
                                 </h3>
                                 <div class="electroHub__gadgets-table">
-                                    <img src="/img/content/tablet.png" alt="">
+                                    <img src="img/content/tablet.png" alt="">
                                 </div>
                             </div>
                         </div>
