--- a/diploma/diploma-project.html
+++ b/diploma/diploma-project.html
@@ -20,7 +20,7 @@
                 <div class="container">
                     <div class="header__top">
                         <a class="header__top-ikon" href="#califonia">
-                            <img src="/img/icons/california.svg" alt="">
+                            <img src="img/icons/california.svg" alt="">
                         </a>
                         <nav class="nav">
                             <ul class="nav__list">
